[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
bcrypt = "0.15.0"
chrono = "0.4.31"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-async-std"] }
